bookstack-with-mysql-deployment.yaml
# kubectl create ns mysql-k3s
apiVersion: v1
kind: Namespace
metadata:
  name: mysql-k3s

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  namespace: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
      - name: bookstack
        image: linuxserver/bookstack:24.10.20241021
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/config"
            name: bokstack-volume
      volumes:
      - name: bokstack-volume
        persistentVolumeClaim:
          claimName: bookstack-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: bookstack-svc
  namespace: bookstack
spec:
  type: NodePort
  selector:
    app: bookstack
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
