mysql-5.7-deployment-singlereplica.yaml
# kubectl create ns mysql-k3s
apiVersion: v1
kind: Namespace
metadata:
  name: mysql-k3s

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: mysql-k3s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-k3s-pvc

---

# ClusterIP service; accessible only with-in the cluster.
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mysql-k3s
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
